--- a/Todo.txt
+++ b/Todo.txt
@@ -1,7 +1,6 @@
-Micah:
-- fix order numbers so they are unique and increment logically, order num 1 order num 2
-- Item id numbers, increment logically
-
-Graeme 
-- edit items/delete items 
-- make sure tables displaying in consistant order
+- finish print view styling/json build
+- allow for 2 pricing schemes 
+- allow slicing option
+- is tax okay
+- add in items from inventory 
+- delete items past due?
